# regenwater_overlast

./: .gitattributes  .gitignore  README.md  patch2.txt  requirements.txt  results.txt  setup.cfg  wet_days2019.txt  wet_days2020.txt  wet_days2021.txt
p2000/: get_coordinates.py  maps_api.py  parse_p2000.py  points_on_map.py  scrape_alarmfase.py  testing_with_api.py
p2000/presentation08_03/: bokeh_dashboard.html  bokeh_dashboard.py
results/creating_plots/: boxplotconstruction.py  boxplotensurance.py  boxplotheight.py  boxplotheightandrain.py  boxplotrain.py
results/result_texts/: requirements.txt  result_ensurance_all.txt  result_ensurance_height.txt  result_ensurance_rain.txt  result_postcode4_all.txt  result_postcode4_height_all.txt  result_postcode4_rain_all.txt  result_postcode6_all.txt  result_postcode6_height_all.txt  result_postcode6_rain_all.txt  result_postcode6_rain_height.txt  result_precise_bouwjaar.txt  result_precise_bouwjaar_enkel.txt  result_precise_bouwjaar_just.txt  result_precise_bouwjaar_no_bouwjaar.txt  result_precise_bouwjaar_wl_bouwjaar.txt  result_precise_height_all.txt  result_precise_rain_all.txt  result_precise_rain_height.txt  result_precise_rain_height_all.txt  resultdepressie.txt  resultpostcode4.txt  resultpostcode4height.txt
results/result_texts/old/: result1600parameters.txt  result_postcode4_rain_height.txt  resultpostcode4rain.txt  resultpostcode6.txt  resultpostcode6height.txt  resultpostcode6rain.txt  resultprecise.txt  resultpreciseheight.txt  resultpreciserain.txt
src/data/: check_for_missing_data.py  merged_precise_coord_transformed.json  merged_precise_coord_transformed_bouwjaar.json  pc6hnr20210801_gwb.csv  postcodes.csv  test.json  testset.json  transform_merged_precise_coord.py
src/data/ensurance/: ensurance_transformed0.json  ensurance_transformed1.json  ensurance_transformed2.json  ensurance_transformed3.json  ensurance_transformed4.json  ensurance_transformed5.json  ensurance_transformed6.json
src/data/postcode4/: postcode4_number1.json  postcode4_number2.json  postcode4_number3.json  postcode4_number4.json  postcode4_number5.json
src/data/postcode6/: postcode6_number1.json  postcode6_number2.json  postcode6_number3.json  (+2 more)
src/p2000/: change_resolution.py  get_coordinates.py  maps_api.py  merge_coords.py  parse_coordinate.py  parse_p2000.py  patch.txt  scrape_alarmfase.py
src/scripts/: analysis.py  analysis2.py  analysis_postcode6.py  analysis_precise.py  change_resolution.py  create_testframes.py  depression.py  generate_dataset.py  generate_dataset_bouwjaar.py  generate_dataset_ensurance.py  postcode_finder.py  rdconverter.py  test.py  transform_ensurance_data.py
(+40 files in other folders)
