[metadata]
name = regenoverlast
description = scriptie regenoverlast
author = Teun de Mast
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    helpers
    helpers.neerslag
    helpers.layerbuilder
install_requires =
    datetime>=4.3
    sklearn>=0.0
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    argon2-cffi>=21.3.0
    argon2-cffi-bindings>=21.2.0
    asttokens>=2.0.5
    attrs>=21.4.0
    autopep8>=1.6.0
    backcall>=0.2.0
    bleach>=4.1.0
    bokeh>=2.4.2
    certifi>=2021.10.8
    cffi>=1.15.0
    charset-normalizer>=2.0.12
    colorama>=0.4.4
    cycler>=0.11.0
    debugpy>=1.5.1
    decorator>=5.1.1
    defusedxml>=0.7.1
    entrypoints>=0.4
    executing>=0.8.3
    fonttools>=4.29.1
    GDAL>=3.4.2
    h5py>=3.6.0
    idna>=3.3
    ipykernel>=6.9.1
    ipython>=8.1.1
    ipython-genutils>=0.2.0
    ipywidgets>=7.6.5
    jedi>=0.18.1
    Jinja2>=3.0.3
    jsonschema>=4.4.0
    jupyter-client>=7.1.2
    jupyter-core>=4.9.2
    jupyterlab-pygments>=0.1.2
    jupyterlab-widgets>=1.0.2
    kiwisolver>=1.3.2
    Levenshtein>=0.18.1
    MarkupSafe>=2.1.0
    matplotlib>=3.5.1
    matplotlib-inline>=0.1.3
    mistune>=0.8.4
    nbclient>=0.5.12
    nbconvert>=6.4.2
    nbformat>=5.1.3
    nest-asyncio>=1.5.4
    notebook>=6.4.8
    numpy>=1.22.2
    OWSLib>=0.25.0
    packaging>=21.3
    pandas>=1.4.1
    pandocfilters>=1.5.0
    parso>=0.8.3
    pickleshare>=0.7.5
    Pillow>=9.0.1
    pip>=21.2.4
    prometheus-client>=0.13.1
    prompt-toolkit>=3.0.28
    pure-eval>=0.2.2
    pycodestyle>=2.8.0
    pycparser>=2.21
    Pygments>=2.11.2
    pyparsing>=3.0.7
    pyproj>=3.3.0
    pyrsistent>=0.18.1
    python-dateutil>=2.8.2
    pytz>=2021.3
    PyYAML>=6.0
    pyzmq>=22.3.0
    rapidfuzz>=2.0.5
    requests>=2.27.1
    scipy>=1.8.0
    Send2Trash>=1.8.0
    setuptools>=58.1.0
    Shapely>=1.8.1.post1
    six>=1.16.0
    stack-data>=0.2.0
    terminado>=0.13.3
    testpath>=0.6.0
    toml>=0.10.2
    tornado>=6.1
    traitlets>=5.1.1
    typing_extensions>=4.1.1
    Unidecode>=1.3.3
    urllib3>=1.26.8
    wcwidth>=0.2.5
    webencodings>=0.5.1
    widgetsnbextension>=3.5.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
analysis = py.typed

[flake8]
max-line-length = 1000